css/style.css
body{
    color: #ffff;
    font-family: gilroy;
    overflow-x: hidden;
}
@font-face {
    font-family: GraublauWeb;
    src: url("../gilroy-light.otf") format("opentype");
}

@media screen and (max-width: 798px) {
    .parallax-window {
        min-height: 225px;
        background: transparent;
        min-height: 333px;
        /*margin-left: -65px;*/

    }
    .head-body{
        height: 260px;
    }
    .how p{
        font-size: 9px;
    }
    .logo{
        margin-left: 7%;
    }
    .nav-menu{
        display: none;
    }
    .intro{
        margin-top: 8%;
        /*margin-left: 7%;*/
    }
    .intro h1{
        font-size: 18px;

    }
    .intro p{
        font-size: 62%;
        padding-right:5px;
        padding-left: 8%;

    }
    .watch{
        width: 94px;
        margin: auto;
        border: solid;
        border-width: 1px;
        border-radius: 33px;
        height: 18px;
        cursor: pointer;
        /* margin-left: 55%; */
        margin-top:-2%;
    }
    .watch p{
        font-size: 7px;
        margin-right: 18px;
        padding-top: 2px;
    }
    .store img{
        width: 46%;
    }
    .dis{
        width: 67%;
    }
    .dis h1{
        font-size: 22px;
        width: 215px;

    }
    .dis p{
        font-size: 9px;
    }
    .scr{
        width: 50%;
    }
    .scr img{
        width: 133px;
        margin-left: -71px;
        margin-top: 110px;
    }
    .abtl{
        width: 65%;
        float: left;

    }
    .abtr{
        width: 20%;
        float: right;
    }
    .parallax3{
        min-height: 440px;
    }
    .how h1{
        font-size: 27px;
    }
    .how{
        /*padding-left: 17%;*/
        padding-right: 3%;
    }
    .icon{
        width: 12%;
        padding-top: 6%;
    }
    .store2 p{
        font-size: 14px;
    }
    .store2{
        /*margin-left: 61px;*/
    }
    .s2{
        height: 140px;
    }
    .s3{
        height: 140px;
    }
    .store2 p{
        color: #ECECED;
        margin-top: 40px;

    }
    .footer p{
        font-size: 9px;
        padding: 10px;
        padding-left: 13px;
    }
    .parallax3{
        background: #EDEEF8;
        margin-top: 0px;

    }
    .play{
        /*width: 80%;*/
        margin: auto;
    }
    .play video{
        margin-top: -141px;
        width: 72%;
        margin-left: 46px;
    }
    .close2{
        margin-top: -134px;
        position: ABSOLUTE;
        Z-INDEX: 100;
        MARGIN-LEFT: 288px;
    }
    #close2{
        color: #fff;
        margin-right: 8px;
        cursor: pointer;
        margin-top: -127px;

    }
    .parallax4{
        min-height: 0px;
    }
    .lineL{
        position: absolute;
        width: 26%;
        margin-top: -34px;
        margin-left: 17px;
    }
    .lineR{
        width: 26%;
        position: absolute;
        margin-left: -124px;
        margin-top: 69px;
    }
    .conDet{
        margin-top: -37px;
    }
    .conDet p{
        font-size: 8px;
    }
    .close1{
        Z-INDEX: 100;
        MARGIN-LEFT: 287px;
        margin-top: -110px;
    }



}
@media screen and (min-width: 798px) {
    .parallax-window {
        min-height: 0;
        background: transparent;


    }
    .head-body{
        height: 800px;
    }
    .drawer-btn{
        display: none;
    }
    .intro{
        margin-top: 16%;
    }
    .watch{
        width: 160px;
        margin: auto;
        border: solid;
        border-width: 1px;
        border-radius: 33px;
        height: 27px;
        cursor: pointer;
        margin-left: 55%;
    }


    .watch p{
        font-size: 11px;
        margin-right: 43px;
        padding-top: 4px;
    }
    .store img{
        width: 47%;
    }
    .logo{
        margin-left: 13%;
    }
    .scr img{
        width: 70%;
        margin-top: 30px;
    }
    .abt{

            margin-top: 5%;

    }
    .dis p{
        font-size: 122%;
    }
    .how .icon{
        width: 7%;
    }
    .icon{
        padding-top: 6%;
    }
    .store2 p{
        font-size: 30px;
    }
    .s2{
        height: 300px;
    }
    .s3{
        height: 300px;
    }
    .store2 p{
        color: #ECECED;
        margin-top: 60px;

    }
    .footer p{
        color: #BFCCDD;
        font-size: 24px;
        padding: 20px;
    }
    .parallax3{
        background: #EDEEF8;
        margin-top: 0px;

    }
    .play{
        width: 700px;
        margin:auto;
    }
    .play video{
        width: 670px;
        margin-top: -308px;
    }
    /*.close{
        color: #fff;
        margin-right: -288px;
        cursor: pointer;
        margin-top: -246px;
    }*/
    .close2{
        color: #fff;
        margin-left: 641px;
        cursor: pointer;
        margin-top: -297px;
        position: absolute;
        z-index: 1;
    }
    .close1{
        margin-right: -270px;
        margin-top: -233px;
    }
    .lineL{
        position: absolute;
        width: 15%;
        margin-top: -62px;
        margin-left: 35px;
    }
    .lineR{
        width: 15%;
        position: absolute;
        margin-left: -246px;
        margin-top: 141px;
    }

    .conDet p{
        padding: 0px;
        font-size: 19px;
    }
    .conDet{
        margin-top: -33px;
    }

}


.logo{
    max-width: 11%;
    height: auto;
    margin-top: 3%;

}

.parallax-mirror,#vurtUnderlay{

    padding:0 0 0;
}
.parallax-mirror img{width:100%!important;height:auto!important}
.drawer-btn{
    margin-right: 11%;
}
.drawer--right.drawer-open .drawer-hamburger {
    display: none;
}
.drawer-nav{
    background-image: linear-gradient(to bottom, #2e1339, #2b1337, #291336, #261334, #241332);
}
.drawer-menu-item{
    color:#fff;
    font-size: 13px;
}
.drawer-nav ul{
    margin-top: 27px;
}
.nav-menu a{
    color: #fff;
    text-decoration: none;
    font-size: 14px;
    padding-left: 35px;
}
.nav-menu{
    margin-top: 6%;
    margin-left: 0px;
}
.intro{
    text-align: center;
    color:#D8CED8;

}
.into p{
    margin-top:-5px;
}
.watch img{
    width: 16%;
    float: left;
}
.watch{
    border-color:#9E6C0A ;
}
.store{
    width: 38%;
    margin: auto;
    margin-top: 7%;
}
.store img{
    cursor: pointer;
}
.abt{
    color:#000;
}
.dis{
    margin-left: 11px;
    margin-top: 7%;
}
.about span{
    color: #9E6C0A;
}
.hus{
    font-weight: 700;
    color: #000;
}
.parallax2{
    min-height: 288px;
}
.how{
    color: #000;
    text-align: center;
    padding-top: 6%;

}
.icon{
    padding-top: 4%;
}

.foo{
    background-image: linear-gradient(to right top, #342239, #332139, #312138, #302038, #2f2037);
}
.s2{
    background-image: linear-gradient(to right top, #53335c, #53335d, #53335f, #523460, #523462);
}
.con{
    margin-top: -28px;
}
.footer span{
    color: #9E6C0A;
}
.copy{
    color: #8A8D91;
}
.footer p{
    color: #BFCCDD;
}
.head-body{
    background-image: url("../images/header_bg.jpg");
    background-repeat: no-repeat;
    background-size: 100% auto;
}
.play{
    display: none;
}

.conDet p{
    color: #9E6C0A;
}
.close span{
    color: #fff;
}
#family video{
    position: relative;
}
.close2{
    position: absolute;
}
.s2{
    width: 100%;
    margin-left: 0;
}
.s3{
    width: 100%;
    margin-left: 0;
}
.parallax2{
    margin-top: -31px;
}
parallax3{
    width: 100%;
    margin-left: 0;
}

